badly named getReplyTarget changed to getReplyTargetIndex